# fin_statement_model

./: .coverage  .coveragerc  .cursorignore  .env  .gitignore  .pre-commit-config.yaml  .ruffignore  .type_ignore_baseline.json  404.html  CHANGELOG.html  CHANGELOG.md  CONFIG_MIGRATION_TODO.md  CONFIG_REFACTOR_TODO.md  Follow Plan Prompt  GRAPH_REFACTOR_PLAN.md  IO_BACKLOG_TODO.md  NEW_STATEMENTS_PRD.md  NEW_STATEMENT_PRs.md  PR8_TODO.md  README.md  TODO.md  api_reference.html  combined_code.txt  concatenate_code.sh  concatenate_script.py  concatenated_code.txt  conftest.py  contra_items_demo.html  google review.md  index.html  mkdocs.yml  mypy.ini  noxfile.py  objects.inv  pyproject.toml  pytest.ini  registry_templates.html  requirements.txt  ruff.toml  stub_list.txt  (+2 more)
.cursor/rules/: codingstandards.mdc  projectpurpose.mdc
.github/workflows/: ci.yml  docs.yml
docs/: CHANGELOG.md  CONFIGURATION_ARCHITECTURE.md  README_realistic_banking_analysis.md  README_simple_banking_graph.md  analysis_roadmap.md  api_reference.md  banking_implementation_summary.md  banking_validation_implementation.md  config_migration_guide.md  configuration_guide.md  error_hierarchy.md  io_refactor_plan.md  logging_guidelines.md  mapping_roadmap.md  metric_yaml_format_example.yaml  registry_templates.md  tutorials.md  valuation_roadmap.md
docs/assets/: stylesheet.css
docs/change_docs/: CHANGELOG.md  METRIC_HELPER_IMPROVEMENT.md  REAL_ESTATE_ADDITIONS.md  REAL_ESTATE_DEBT_ADDITIONS.md  REORGANIZATION_COMPLETE.md  REORGANIZATION_SUMMARY.md
docs/refactor/: graph_services.md
docs/references/: modules.md
examples/: README.md  example_company.ipynb  example_company.py  fsm_config.yaml.example  real_estate_debt_analysis_example.py  use_statement_config.py
examples/configs/: enhanced_income_statement.yaml  income_statement_with_adjustments.yaml  real_estate_debt_statement.yaml  reit_statement.yaml
examples/examples/: balance_sheet.json
examples/excel_files/: example_import.py  load_excel.ipynb  ~$101-01-90-Minute-Case-Study-Otis-Complete.xlsx
examples/notebooks/: core_basic_usage.ipynb  example_company.ipynb  fmp_example.ipynb  fmp_income_statement_example.ipynb
examples/output/: AAPL_financial_model.xlsx  AAPL_financial_statements.xlsx
examples/scripts/: clean_api_demo.py  config_demo.py  contra_items_demo.py  contra_items_demo_simple.py  core_basic_usage.py  declarative_adjustment_demo.py  example_adjustments.py  example_company.py  example_statement_with_adjustments.py  fmp_example.py  fmp_importer_example.py  med_example.py  metric_interpretation_examples.py  node_validation_example.py  preprocessing_complete_example.py  simple_example.py  simple_fmp_example.py  templates_end_to_end.py  test_preprocessing_basics.py  test_statement_example.py  validation_examples.py
fin_statement_model/: __init__.py  builder.py  create_financial_statement.py  financial_statement.py  forecasts.py  graph.py  logging_config.py  metrics.py  nodes.py  stats.py
fin_statement_model/calculations/: __init__.py  calculation_strategy.py  strategy_registry.py
fin_statement_model/cli/: __init__.py
fin_statement_model/config/: README.md  __init__.py  access.py  cli.py  decorators.py  discovery.py  dynamic_mappings.json  helpers.py  introspection.py  loader.py  logging_hook.py  manager.py  metric_mappings.py  models.py  param_mapping.py  store.py  utils.py
fin_statement_model/core/: README.md  __init__.py  calculation_engine.py  data_manager.py  engine.py  errors.py  financial_statement.py  graph.py  logging.py  metrics.py  node_factory.py  nodes.py  stats.py
fin_statement_model/extensions/: __init__.py
fin_statement_model/forecasting/: README.md  __init__.py  errors.py  forecaster.py  period_manager.py  strategies.py  types.py  validators.py
fin_statement_model/forecasts/: __init__.py  forecasts.py
fin_statement_model/importers/: adapter_base.py  adapter_factory.py  adapter_registry.py  excel_adapter.py  excel_importer.py  exceptions.py  fmp.py  mapping_service.py
fin_statement_model/io/: README.md  __init__.py  adjustments_excel.py  base.py  context_aware_validator.py  exceptions.py  export_manager.py  import_manager.py  node_name_validator.py  registry.py  utils.py  validation.py
fin_statement_model/llm/: llm_client.py
fin_statement_model/preprocessing/: README.md  __init__.py  base_transformer.py  config.py  enums.py  errors.py  periods.py  transformation_service.py  transformer_factory.py  transformer_service.py  transforms.py  types.py  utils.py
fin_statement_model/statements/: README.md  __init__.py  builder.py  errors.py  factory.py  formatter.py  graph.py  loaders.py  manager.py  populator.py  registry.py  statement_config.py  statement_formatter.py  statement_manager.py  statement_structure.py  validation.py
fin_statement_model/templates/: README.md  __init__.py  diff.py  models.py  registry.py
fin_statement_model/transformations/: __init__.py  base_transformer.py  financial_transformers.py  transformation_service.py  transformer_factory.py
fin_statement_model/utils/: __init__.py  create_financial_statement.py  dicts.py  formatting.py  merge.py
html/fin_statement_model/: index.html  logging_config.html
html/pdoc/: cli.html  doc.html  extract.html  html_helpers.html  index.html  render.html  static.html  version.html  web.html
notebooks/: config_test.ipynb
pdoc/fin_statement_model/: index.html  logging_config.html
references/: modules.html
scripts/: find_yaml_duplicates.py  update_checksum.py
search/: search_index.json
tests/: __init__.py  test_excel_import.py  test_io_registry.py  test_sign_helpers.py  test_small_coverage.py
tests/backends/: test_backend_contract.py  test_s3_backend_integration.py
tests/calculations/: __init__.py  test_calculation_strategy.py  test_strategy_registry.py
tests/config/: test_config_manager.py  test_config_package.py  test_decorators.py  test_discovery.py  test_helpers.py  test_helpers_additional.py  test_introspection.py  test_manager.py  test_models.py  test_param_mapping.py  test_utils.py
tests/core/: test_core_additional.py  (+18 more)
(+944 files in other folders)
