[project]
name = "fin-statement-model"
version = "0.1.0"
description = ""
authors = [
    {name = "Jon Eickmeier", email = "me@jeickmeier.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.1.4",
    "matplotlib>=3.8.2",
    "requests>=2.31.0",
    "plotly>=5.24.1",
    "nbformat>=5.10.4",
    "playwright>=1.49.1",
    "openai>=1.61.0",
    "backoff>=2.2.1",
    "openpyxl>=3.1.5",
    "ipykernel>=6.29.5",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.3",    
]

[tool.coverage.run]
source = ["fin_statement_model"]
omit = ["*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "pass",
    "raise ImportError",
    "except ImportError:",
    "if __name__ == .__main__.:",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"
